🎯 MAJOR: Implement Creator Coin Trading with Real Zora Router
✅ BREAKTHROUGH DISCOVERIES:
- Found REAL Zora router: 0x6ff5693b99212da76ad316178a184ab56d299b43
- Decoded successful transaction: 4-command sequence (WRAP_ETH + V3_SWAP + V4_SWAP + SWEEP)
- Identified multi-hop trading path: ETH → WETH → Intermediate Token → Creator Coin
- Intermediate token: 0x833589fcd6edb6e08f4c7c32d4f71b54bda02913 (highly active)

🔧 IMPLEMENTATION:
- Updated DexService with correct Zora router contract
- Implemented 4-command transaction structure matching successful trades
- Added exact transaction replication with parameter scaling
- Created comprehensive debugging and analysis toolset

📊 ANALYSIS SCRIPTS:
- analyze-actual-trade.ts: Decode real trading transactions
- extract-exact-inputs.ts: Extract parameters from successful trades
- test-exact-replication.ts: Replicate successful transactions
- check-intermediate-token.ts: Verify trading path viability
- 25+ additional debugging and research scripts

📋 CONFIGURATION:
- Added live trading safety switches (DRY_RUN_MODE, ENABLE_BUYING/SELLING)
- Updated config validation for trading parameters
- Enhanced logging for trade operations

🎯 CURRENT STATUS:
- Transaction structure: ✅ CORRECT (matches successful trades)
- Router contract: ✅ VERIFIED (real Zora router)
- Trading path: ✅ VALIDATED (intermediate token active)
- Ready for: 🧪 Live testing with proper amount

📚 DOCUMENTATION:
- V4_IMPLEMENTATION_GUIDE.md: Complete V4 architecture guide
- TRADING_STRATEGY.md: Trading implementation strategies
- HOW_TO_IMPLEMENT_V4.md: Step-by-step implementation guide

🚀 NEXT: Test exact replication with 0.03 ETH to validate trading

--- a/config.example.env
+++ b/config.example.env
@@ -20,8 +20,30 @@ MAX_HOLD_TIME_MINUTES=1440
 # Log level control (DEBUG=all details, INFO=normal, WARN=trades only, ERROR=errors only)
 LOG_LEVEL=INFO
 
-# Private key for trading (be very careful with this!)
-# PRIVATE_KEY=your_private_key_here
+# ⚠️ REAL TRADING CONFIGURATION (DANGEROUS!) ⚠️
+# Only enable these for LIVE TRADING with real money
+
+# Your wallet private key (WITHOUT 0x prefix)
+# ⚠️ NEVER share this key or commit it to git!
+# PRIVATE_KEY=your_64_character_private_key_here
+
+# Transaction safety limits
+MAX_GAS_PRICE_GWEI=20              # Reject if gas > 20 gwei
+MAX_SLIPPAGE_PERCENT=5             # Maximum slippage tolerance
+MIN_LIQUIDITY_ETH=1.0              # Minimum pool liquidity required
+TRANSACTION_DEADLINE_MINUTES=10    # Transaction deadline
+
+# Trading parameters
+TRADE_AMOUNT_ETH=0.001             # Amount per trade (start VERY small!)
+MAX_POSITIONS=2                    # Maximum concurrent positions
+TAKE_PROFIT_PERCENT=150.0          # Take profit at +150%
+STOP_LOSS_PERCENT=50.0             # Stop loss at -50%
+MAX_HOLD_TIME_MINUTES=60           # Max hold time: 1 hour
+
+# Safety switches
+ENABLE_BUYING=false                # Must be true to buy tokens
+ENABLE_SELLING=false               # Must be true to sell tokens
+DRY_RUN_MODE=true                  # Set false for real transactions
 
 # Optional: Discord/Telegram webhook for notifications
 # DISCORD_WEBHOOK_URL=
