--- a/deno.json
+++ b/deno.json
@@ -18,7 +18,31 @@
     "test-log-levels": "deno run --allow-net --allow-env --allow-read scripts/test-log-levels.ts",
     "test-validation": "deno run --allow-net --allow-env --allow-read scripts/test-ethos-validation.ts",
     "test-startup": "deno run --allow-net --allow-env --allow-read scripts/test-startup-filtering.ts",
-    "test-strict": "deno run --allow-net --allow-env --allow-read scripts/test-strict-filtering.ts"
+    "test-strict": "deno run --allow-net --allow-env --allow-read scripts/test-strict-filtering.ts",
+    "test-trading": "deno run --allow-net --allow-env --allow-read scripts/test-trading-config.ts",
+    "find-v4": "deno run --allow-net --allow-env --allow-read scripts/find-v4-addresses.ts",
+    "analyze-v4-tx": "deno run --allow-net --allow-env --allow-read scripts/analyze-v4-transaction.ts",
+    "verify-v4": "deno run --allow-net --allow-env --allow-read scripts/verify-v4-address.ts",
+    "research-v4": "deno run --allow-net --allow-env --allow-read scripts/research-v4-periphery.ts",
+    "test-creator-trading": "deno run --allow-net --allow-env --allow-read scripts/test-creator-coin-trading.ts",
+    "deep-dive": "deno run --allow-net --allow-env --allow-read scripts/deep-dive-creator-coin.ts",
+    "analyze-zora-v4": "deno run --allow-net --allow-env --allow-read scripts/analyze-zora-v4-integration.ts",
+    "analyze-v4-routers": "deno run --allow-net --allow-env --allow-read scripts/analyze-v4-routers.ts",
+    "implement-v4": "deno run --allow-net --allow-env --allow-read scripts/implement-v4-trading.ts",
+    "find-verified-router": "deno run --allow-net --allow-env --allow-read scripts/find-verified-v4-router.ts",
+    "universal-router-v4": "deno run --allow-net --allow-env --allow-read scripts/implement-universal-router-v4.ts",
+    "test-v4-buy": "deno run --allow-net --allow-env --allow-read scripts/test-v4-buy.ts",
+    "check-creator-pool": "deno run --allow-net --allow-env --allow-read scripts/check-creator-coin-pool.ts",
+    "investigate-zora-trading": "deno run --allow-net --allow-env --allow-read scripts/investigate-zora-base-trading.ts",
+    "analyze-actual-trade": "deno run --allow-net --allow-env --allow-read scripts/analyze-actual-trade.ts",
+    "investigate-real-router": "deno run --allow-net --allow-env --allow-read scripts/investigate-real-router.ts",
+    "test-real-zora-trading": "deno run --allow-net --allow-env --allow-read scripts/test-real-zora-trading.ts",
+    "compare-transaction-data": "deno run --allow-net --allow-env --allow-read scripts/compare-transaction-data.ts",
+    "decode-successful-tx": "deno run --allow-net --allow-env --allow-read scripts/decode-successful-transaction.ts",
+    "extract-exact-inputs": "deno run --allow-net --allow-env --allow-read scripts/extract-exact-inputs.ts",
+    "test-exact-replication": "deno run --allow-net --allow-env --allow-read scripts/test-exact-replication.ts",
+    "check-intermediate-token": "deno run --allow-net --allow-env --allow-read scripts/check-intermediate-token.ts",
+    "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
     "@std/dotenv": "jsr:@std/dotenv@^0.225.0",
