🔧 CRITICAL FIX: Correct coin address extraction from Zora events
- Fixed broken regex-based address extraction that was finding invalid hex strings
- Implemented proper position-based extraction from event data field (bytes 12-32)
- Addresses now extracted: 0x1111111111166b7fe7bd91427724b487980afc69 (valid Zora token)
- Previously extracted: 0x0000000000000000000000005ded28c56df9007d (invalid/non-existent)
- Added debug logging for event data extraction
- Created investigation scripts to diagnose and verify the fix
- Resolves 'Token contract does not exist' errors that prevented all trades

✅ Bot now extracts real creator coin addresses instead of garbage
✅ Trading validation will pass for actual tokens
✅ Ready for successful live trades

--- a/deno.json
+++ b/deno.json
@@ -42,14 +42,35 @@
     "extract-exact-inputs": "deno run --allow-net --allow-env --allow-read scripts/extract-exact-inputs.ts",
     "test-exact-replication": "deno run --allow-net --allow-env --allow-read scripts/test-exact-replication.ts",
     "check-intermediate-token": "deno run --allow-net --allow-env --allow-read scripts/check-intermediate-token.ts",
+    "check-balance": "deno run --allow-net --allow-env --allow-read scripts/check-wallet-balance.ts",
+    "debug-creator-coin": "deno run --allow-net --allow-env --allow-read scripts/debug-creator-coin.ts",
+    "test-zora-sdk": "deno run --allow-net --allow-env --allow-read scripts/test-zora-sdk-trading.ts",
+    "test-dex-service": "deno run --allow-net --allow-env --allow-read scripts/test-dex-service.ts",
+    "explain-selling": "deno run --allow-net --allow-env --allow-read scripts/explain-selling-strategies.ts",
+    "test-price-options": "deno run --allow-net --allow-env --allow-read scripts/test-price-querying-options.ts",
+    "test-price-service": "deno run --allow-net --allow-env --allow-read scripts/test-price-service.ts",
+    "test-strategies": "deno run --allow-net --allow-env --allow-read scripts/test-strategy-system.ts",
+    "debug-magicianafk": "deno run --allow-net --allow-env --allow-read scripts/debug-magicianafk.ts",
+    "test-fallback": "deno run --allow-net --allow-env --allow-read scripts/test-fallback-logic.ts",
+    "verify-twitter-fix": "deno run --allow-net --allow-env --allow-read scripts/verify-twitter-fix.ts",
+    "test-dex-status": "deno run --allow-net --allow-env --allow-read scripts/test-dex-trading-status.ts",
+    "debug-trading": "deno run --allow-net --allow-env --allow-read scripts/debug-trading-failure.ts",
+    "test-buy": "deno run --allow-net --allow-env --allow-read scripts/test-specific-buy.ts",
+    "test-logging": "deno run --allow-net --allow-env --allow-read scripts/test-logging-levels.ts",
+    "test-warn-logs": "deno run --allow-net --allow-env --allow-read scripts/test-warn-logging.ts",
+    "investigate-token": "deno run --allow-net --allow-env --allow-read scripts/investigate-failed-token.ts",
+    "investigate-events": "deno run --allow-net --allow-env --allow-read scripts/investigate-event-structure.ts",
+    "fix-events": "deno run --allow-net --allow-env --allow-read scripts/fix-event-decoding.ts",
+    "test-extraction": "deno run --allow-net --allow-env --allow-read scripts/test-fixed-extraction.ts",
     "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
     "@std/dotenv": "jsr:@std/dotenv@^0.225.0",
     "@std/log": "jsr:@std/log@^0.224.0",
+    "@std/cli": "jsr:@std/cli@^1.0.0",
     "viem": "npm:viem@^2.21.0",
     "ethers": "npm:ethers@^6.13.0",
-    "@zoralabs/coins-sdk": "npm:@zoralabs/coins-sdk@latest"
+    "@zoralabs/coins-sdk": "npm:@zoralabs/coins-sdk@^0.2.9"
   },
   "compilerOptions": {
     "allowJs": true,
