🐛 FIX: Strategy threshold bug - Using wrong minEthosScore
PROBLEM:
- Degen strategy requires ≥1600 score but was qualifying 1341, 1275 creators
- ZoraListener was using config.minEthosScore (1226) instead of strategy value
- Duplicate threshold checks in ZoraListener and TradingBot

FIX:
- Removed duplicate threshold check from ZoraListener
- TradingBot now handles all threshold checks with strategy-specific values
- Added proper QUALIFIES logging with strategy name and threshold

RESULT:
✅ Degen strategy now correctly requires ≥1600 (not 1226)
✅ Conservative: ≥1226, Degen: ≥1600, etc.
✅ No more incorrect qualifications for strategy-inappropriate creators

--- a/deno.json
+++ b/deno.json
@@ -62,6 +62,7 @@
     "investigate-events": "deno run --allow-net --allow-env --allow-read scripts/investigate-event-structure.ts",
     "fix-events": "deno run --allow-net --allow-env --allow-read scripts/fix-event-decoding.ts",
     "test-extraction": "deno run --allow-net --allow-env --allow-read scripts/test-fixed-extraction.ts",
+    "test-threshold": "deno run --allow-net --allow-env --allow-read scripts/test-strategy-threshold.ts",
     "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
