🔧 FIX: WARN logs only for qualifying creators
PROBLEM:
- WARN logs were showing for ALL creators before qualification check
- Users with scores < strategy threshold were still generating WARN logs
- Duplicate 'FOUND QUALIFYING CREATOR' messages
- WARN mode cluttered with non-qualifying users

FIX:
- Moved WARN logs to AFTER qualification check in evaluateAndTrade()
- Non-qualifying users now filtered silently (no WARN logs)
- Only users meeting strategy threshold generate WARN logs
- Clean, focused WARN output showing only actual trading opportunities

RESULT:
✅ Degen strategy (≥1600): Only scores 1600+ show WARN logs
✅ Scores 1341, 1275 now filtered silently (no WARN spam)
✅ WARN mode shows only genuine qualification and trade attempts
✅ Much cleaner logs for actual trading opportunities

--- a/deno.json
+++ b/deno.json
@@ -63,6 +63,7 @@
     "fix-events": "deno run --allow-net --allow-env --allow-read scripts/fix-event-decoding.ts",
     "test-extraction": "deno run --allow-net --allow-env --allow-read scripts/test-fixed-extraction.ts",
     "test-threshold": "deno run --allow-net --allow-env --allow-read scripts/test-strategy-threshold.ts",
+    "test-warn-fix": "deno run --allow-net --allow-env --allow-read scripts/test-warn-logging-fix.ts",
     "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
