--- a/deno.json
+++ b/deno.json
@@ -64,6 +64,7 @@
     "test-extraction": "deno run --allow-net --allow-env --allow-read scripts/test-fixed-extraction.ts",
     "test-threshold": "deno run --allow-net --allow-env --allow-read scripts/test-strategy-threshold.ts",
     "test-warn-fix": "deno run --allow-net --allow-env --allow-read scripts/test-warn-logging-fix.ts",
+    "test-sell-fix": "deno run --allow-net --allow-env --allow-read scripts/test-sell-functionality.ts",
     "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
