🔍 ENHANCE: Event timing debugging - Add detailed age analysis
ISSUE:
- User bought tokens for creator who 'joined quite a while ago'
- Current filtering should only allow events <10 blocks old (~2 minutes)
- Possible bug in timestamp/block filtering logic

DEBUGGING ENHANCEMENTS:
✅ Added detailed EVENT ANALYSIS logging for every processed event
✅ Shows exact timestamps, current time, event age, block age
✅ Compares event time vs bot startup time
✅ Warnings for events >2 minutes old, alerts for >5 minutes
✅ Added strict 10-minute cutoff as backup safety filter

NEW LOGGING OUTPUT:
🔍 EVENT ANALYSIS:
   Token: 0x...
   Event Time: 2025-01-30T14:30:00.000Z
   Current Time: 2025-01-30T14:32:00.000Z
   Event Age: 120s (2.0 minutes)
   Block Age: 8 blocks
   Startup Time: 2025-01-30T14:30:30.000Z
   Time Since Startup: 90s

SAFETY MEASURES:
✅ Strict 10-minute absolute cutoff for old events
✅ Warnings for suspicious event ages (>2min, >5min)
✅ Detailed startup time comparison logging

NEXT STEPS:
- Run bot and check EVENT ANALYSIS logs for next detection
- Verify actual creation times on BaseScan manually
- Compare bot detection time vs real token creation time

--- a/deno.json
+++ b/deno.json
@@ -65,6 +65,8 @@
     "test-threshold": "deno run --allow-net --allow-env --allow-read scripts/test-strategy-threshold.ts",
     "test-warn-fix": "deno run --allow-net --allow-env --allow-read scripts/test-warn-logging-fix.ts",
     "test-sell-fix": "deno run --allow-net --allow-env --allow-read scripts/test-sell-functionality.ts",
+    "investigate-timing": "deno run --allow-net --allow-env --allow-read scripts/investigate-token-timing.ts",
+    "check-basescan": "deno run --allow-net --allow-env --allow-read scripts/check-token-basescan.ts",
     "check-networks": "deno run --allow-net --allow-env --allow-read scripts/check-zora-network.ts"
   },
   "imports": {
